
01/01/2011 Changes

Adding more tests around analyser. Fleshing out interaction with generator.

28/10/2010 Changes

Added SourceFile to add methods to File that we need.
Added Tests around Analysis and interaction with generator.

24/10/2010 Changes

Added AnalyserTest to drive out interaction with Nodes and Generator.
Added Analyser class.
Added Generator class.

23/12/2010 Changes

Added parsing of source input into Node tree.
Added visiting of Node tree.
Fixed an error in capturing multiple unary messages in grammar.
Slapped self on wrist for not updating this file more frequently.

21/12/2010 Changes

Added delegation to Interpreter to interpret source code. Added Tests around delegation.

20/12/2010 Changes

Added stic.bat supplied by Jeff Heon. Adapted from Kasim's ClojureW Project (https://bitbucket.org/kasim/clojurew)
Refactored File related functionality out into FileReader class. Need tests around FileReader.

16/12/2010 Changes

Refactored SticTest to use PrintWriters rather than PrintStreams, since PrintWriters
will be used later. Makes for less code = good. Refactoring suggested by David Kemp.

Added Smalltalk and Environment Tests and Classes.

Added Mockito mocking framework to help with Testing.
